--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,7 @@ org.gradle.jvmargs=-Xmx1G
 org.gradle.daemon=false
 systemProp.file.encoding=UTF-8
 
+mod_version=1.0
 forge_gradle_version=2.3.4
 use_mirror_url=true
 # BMCLAPI is unstable sometimes, use lss233's mirror for alternative.
