--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -6,10 +6,7 @@ name: Build Test Artifact
 
 on:
   push:
-    branches:
-        - 'main'
-    paths:
-        - 'src/**'
+  pull-request:
 
 jobs:
   build:
