--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ apply from: "runmanager.gradle"
 
 version = mod_version
 group = "com.ideallandframework.modid" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "modid"
+archivesBaseName = mod_id
 
 sourceCompatibility = targetCompatibility = "1.8" // Need this here so eclipse task generates correctly.
 compileJava {
