--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,7 @@ org.gradle.daemon=false
 systemProp.file.encoding=UTF-8
 
 mod_version=1.0
+mod_id=example
 forge_gradle_version=2.3.4
 use_mirror_url=false
 # BMCLAPI is unstable sometimes, use lss233's mirror for alternative.
