--- a/gradle.properties
+++ b/gradle.properties
@@ -4,9 +4,16 @@ org.gradle.jvmargs=-Xmx1G
 org.gradle.daemon=false
 systemProp.file.encoding=UTF-8
 
-mod_version=1.0
-mod_id=example
-forge_gradle_version=2.3.4
+# Increase timeout for HTTP timeouts, see https://github.com/gradle/gradle/pull/3371
+systemProp.http.connectionTimeout=60000
+systemProp.http.socketTimeout=6000
+systemProp.org.gradle.internal.http.connectionTimeout=60000
+systemProp.org.gradle.internal.http.socketTimeout=60000
+
+systemProp.sun.net.client.defaultConnectTimeout=60000
+systemProp.sun.net.client.defaultReadTimeout=60000
+
+## Mirror
 use_mirror_url=false
 # BMCLAPI is unstable sometimes, use lss233's mirror for alternative.
 #mirror_maven_url=bmclapi2.bangbang93.com/maven
@@ -16,11 +23,32 @@ mirror_maven_url=crystal.app.lss233.com/repositories/minecraft
 mirror_assets_url=bmclapi2.bangbang93.com
 #mirror_assets_url=download.mcbbs.net
 
-# Increase timeout for HTTP timeouts, see https://github.com/gradle/gradle/pull/3371
-systemProp.http.connectionTimeout=60000
-systemProp.http.socketTimeout=6000
-systemProp.org.gradle.internal.http.connectionTimeout=60000
-systemProp.org.gradle.internal.http.socketTimeout=60000
 
-systemProp.sun.net.client.defaultConnectTimeout=60000
-systemProp.sun.net.client.defaultReadTimeout=60000
+## Environment Properties
+
+
+cleanroom_version=15.24.0.3036
+
+mapping_channel=stable
+mapping_version=39-1.12
+
+
+## Mod Properties
+
+# The unique mod identifier for the mod. Must be lowercase in English locale. Must fit the regex [a-z][a-z0-9_]{1,63}
+# Must match the String constant located in the main mod class annotated with @Mod.
+mod_id=examplemod
+# The human-readable display name for the mod.
+mod_name=Example Mod
+# The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
+mod_license=All Rights Reserved
+# The mod version. See https://semver.org/
+mod_version=1.0.0
+# The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
+# This should match the base package used for the mod sources.
+# See https://maven.apache.org/guides/mini/guide-naming-conventions.html
+mod_group_id=com.example.examplemod
+# The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
+mod_authors=YourNameHere, OtherNameHere
+# The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
+mod_description=Example mod description.\nNewline characters can be used and will be replaced properly.
