--- a/settings.gradle
+++ b/settings.gradle
@@ -15,3 +15,17 @@ if (!System.getProperty('java.version').startsWith("1.8.") || javaEdition == "RE
         throw new RuntimeException(it)
     }
 }
+
+pluginManagement {
+    repositories {
+        gradlePluginPortal()
+        maven {
+            name = 'MinecraftForge'
+            url = 'https://maven.minecraftforge.net/'
+        }
+    }
+}
+
+plugins {
+    id 'org.gradle.toolchains.foojay-resolver-convention' version '0.7.0'
+}
