--- a/settings.gradle
+++ b/settings.gradle
@@ -22,7 +22,7 @@ def javac = System.getProperty('os.name').toLowerCase(Locale.ENGLISH).contains("
 if (!file(System.getProperty('java.home') + javac).exists()) {
     javaEdition = "RE"
 }
-if (!System.getProperty('java.version').startsWith("1.8.") || javaEdition == "RE") {
+if (!System.getProperty('java.version').startsWith("21") || javaEdition == "RE") {
     "你使用了 J${javaEdition} ${System.getProperty('java.version')}，请确保安装了 JDK 1.8 （不是 JRE 1.8），并且 JAVA_HOME 环境变量指向 JDK 1.8 的路径之后再构建".with {
         println it
         throw new RuntimeException(it)
