--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -33,7 +33,7 @@ jobs:
           - name: Build
             uses: gradle/gradle-build-action@v2
             with:
-              arguments: build
+              arguments: build --info --stacktrace
           - name: Upload Build Artifacts
             uses: actions/upload-artifact@v2.2.3
             with:
