--- a/gradle.properties
+++ b/gradle.properties
@@ -1,54 +1,22 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs = -Xmx3G
+#-DsocksProxyHost=127.0.0.1 -DsocksProxyPort=1081
 org.gradle.daemon=false
-systemProp.file.encoding=UTF-8
+#org.gradle.java.home=C:/Program Files/Java/jdk-1.8
 
-# Increase timeout for HTTP timeouts, see https://github.com/gradle/gradle/pull/3371
-systemProp.http.connectionTimeout=60000
-systemProp.http.socketTimeout=6000
-systemProp.org.gradle.internal.http.connectionTimeout=60000
-systemProp.org.gradle.internal.http.socketTimeout=60000
+minecraft_version=1.12.2
+minecraft_version_range=[1.12,1.13)
+forge_version=14.23.5.2860
+forge_version_range=[23,)
+loader_version_range=[23,)
+mappings_channel=stable
+mappings_version=39-1.12
 
-systemProp.sun.net.client.defaultConnectTimeout=60000
-systemProp.sun.net.client.defaultReadTimeout=60000
-
-## Mirror
-use_mirror_url=false
-# BMCLAPI is unstable sometimes, use lss233's mirror for alternative.
-#mirror_maven_url=bmclapi2.bangbang93.com/maven
-mirror_maven_url=crystal.app.lss233.com/repositories/minecraft
-#mirror_maven_url=download.mcbbs.net/maven
-
-mirror_assets_url=bmclapi2.bangbang93.com
-#mirror_assets_url=download.mcbbs.net
-
-
-## Environment Properties
-
-
-cleanroom_version=15.24.0.3029
-
-mapping_channel=stable
-mapping_version=39-1.12
-
-
-## Mod Properties
-
-# The unique mod identifier for the mod. Must be lowercase in English locale. Must fit the regex [a-z][a-z0-9_]{1,63}
-# Must match the String constant located in the main mod class annotated with @Mod.
-mod_id=examplemod
-# The human-readable display name for the mod.
-mod_name=Example Mod
-# The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
-mod_license=All Rights Reserved
-# The mod version. See https://semver.org/
-mod_version=1.0.0
-# The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
-# This should match the base package used for the mod sources.
-# See https://maven.apache.org/guides/mini/guide-naming-conventions.html
-mod_group_id=com.example.examplemod
-# The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
-mod_authors=YourNameHere, OtherNameHere
-# The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=Example mod description.\nNewline characters can be used and will be replaced properly.
+mod_id=fugue
+mod_name=Fugue
+mod_main_class=Fugue
+mod_version=0.14.3-beta
+mod_base_package=com.cleanroommc.fugue
+mod_authors=kappa_maintainer
+mod_description=A mod that patch dead mods for Cleanroom
