--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ apply plugin: 'java'
 apply plugin: 'org.spongepowered.mixin'
 apply plugin: 'net.kyori.blossom'
 
-version = "${minecraft_version}-${mod_version}"
+version = "1.12.2-${mod_version}"
 group = mod_base_package
 archivesBaseName = "+" + mod_name
 
