--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ minecraft_version=1.12.2
 minecraft_version_range=[1.12,1.13)
 forge_version=14.23.5.2860
 forge_version_range=[23,)
-loader_version_range=[23,)
+cleanroom_version=15.24.0.3029
 mappings_channel=stable
 mappings_version=39-1.12
 
