--- a/gradle.properties
+++ b/gradle.properties
@@ -13,10 +13,9 @@ cleanroom_version=15.24.0.3029
 mappings_channel=stable
 mappings_version=39-1.12
 
-mod_id=fugue
-mod_name=Fugue
-mod_main_class=Fugue
-mod_version=0.14.3-beta
-mod_base_package=com.cleanroommc.fugue
-mod_authors=kappa_maintainer
-mod_description=A mod that patch dead mods for Cleanroom
+mod_id=example
+mod_name=Example
+mod_version=1.0
+mod_base_package=mods.somebody.example
+mod_authors=somebody
+mod_description=Example mod description
