--- a/build.gradle
+++ b/build.gradle
@@ -114,7 +114,7 @@ repositories {
 }
 
 dependencies {
-    minecraft "com.cleanroommc:cleanroom:15.24.0.3038"
+    minecraft "com.cleanroommc:cleanroom:${cleanroom_version}"
 
     // Mixin and it's common libraries
     // annotationProcessor 'org.ow2.asm:asm:9.6'
