--- a/gradle.properties
+++ b/gradle.properties
@@ -67,7 +67,5 @@ asset_mover_version = 2.5
 # Mirror
 # Make it true and you will try to use mirror first
 use_mirror = true
-# BMCLAPI is unstable sometimes, use lss233's mirror for alternative.
-mirror_maven_url=bmclapi2.bangbang93.com/maven
-#mirror_maven_url=crystal.app.lss233.com/repositories/minecraft
+mirror_maven_url=crystal.app.lss233.com/repositories/minecraft
 #mirror_maven_url=download.mcbbs.net/maven
