--- a/gradle/scripts/mirror.gradle
+++ b/gradle/scripts/mirror.gradle
@@ -1,18 +1,35 @@
 buildscript {
     repositories {
-        maven { url "https://maven.aliyun.com/nexus/content/groups/public" }
-        maven { url "https://${mirror_maven_url}" }
+        if (use_mirror == 'true') {
+            //use mirror maven first, but try orgin for fail trying
+            maven { url "https://maven.aliyun.com/nexus/content/groups/public" }
+            maven { url "https://${mirror_maven_url}" }
+        }
+        maven { url = 'https://maven.minecraftforge.net' }
+        maven { url = 'https://maven.outlands.top/releases' }
+        maven { url = 'https://repo.spongepowered.org/repository/maven-public' }
+        mavenCentral()
+        gradlePluginPortal()
     }
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '6.10.+', changing: true
+        classpath "org.spongepowered:mixingradle:0.7.+"
     }
 }
 
 repositories {
-    if (use_mirror_url == "true") {
-        maven { url "https://maven.aliyun.com/nexus/content/groups/public" }
-        maven { url "file://${projectDir}/.gradle/local-repo" }
-        maven { url "https://${mirror_maven_url}" }
+    repositories {
+        if (use_mirror == 'true') {
+            //use mirror maven first, but try orgin for fail trying
+            maven { url "https://maven.aliyun.com/nexus/content/groups/public" }
+            maven { url "https://${mirror_maven_url}" }
+            maven { url "file://${projectDir}/.gradle/local-repo" }
+        }
+        maven { url = 'https://maven.minecraftforge.net' }
+        maven { url = 'https://maven.outlands.top/releases' }
+        maven { url = 'https://repo.spongepowered.org/repository/maven-public' }
+        mavenCentral()
+        gradlePluginPortal()
     }
 }
 import sun.misc.SharedSecrets
