--- a/gradle.properties
+++ b/gradle.properties
@@ -65,7 +65,7 @@ asset_mover_version = 2.5
 
 
 # Mirror
-# Make it true and you will try to use mirror first
+# Make it true and you will try to use mirror when orginal source fail
 use_mirror = true
 mirror_maven_url=crystal.app.lss233.com/repositories/minecraft
 #mirror_maven_url=download.mcbbs.net/maven
