--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,7 @@ java.toolchain.languageVersion = JavaLanguageVersion.of(21)
 
 minecraft {
 
-    mappings channel: mappings_channel, version: mappings_version
+    mappings channel: propertyString('mappings_channel'), version: propertyString('mappings_version')
 
 
     if(propertyBool('use_access_transformer')){
