--- a/build.gradle
+++ b/build.gradle
@@ -146,7 +146,7 @@ dependencies {
     // The "userdev" classifier will be requested and setup by ForgeGradle.
     // If the group id is "net.minecraft" and the artifact id is one of ["client", "server", "joined"],
     // then special handling is done to allow a setup of a vanilla dependency without the use of an external repository.
-    minecraft "com.cleanroommc:cleanroom:${cleanroom_version}"
+    minecraft "com.cleanroommc:cleanroom:${propertyString('cleanroom_version')}"
 
     // Example mod dependency with JEI
     // The JEI API is declared for compile time use, while the full JEI artifact is used at runtime
