--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ buildscript {
         if (use_mirror == 'true') {
             //use mirror maven later, but try orgin for fail trying
             maven { url "https://maven.aliyun.com/nexus/content/groups/public" }
-            maven { url "https://${propertyString('mirror_maven_url')}" }
+            maven { url "https://${mirror_maven_url}" }
         }
     }
     dependencies {
