--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 # Gradle Properties
 org.gradle.jvmargs = -Xmx3G
 
+cleanroom_version=15.24.0.3029
 # Mod Information
 # HIGHLY RECOMMEND complying with SemVer for mod_version: https://semver.org/
 mod_version = 1.0.0
