--- a/gradle.properties
+++ b/gradle.properties
@@ -20,7 +20,7 @@ mod_logo_path =
 
 # Mapping Properties
 mapping_channel = stable
-mapping_version = 39
+mapping_version = 39-1.12
 use_dependency_at_files = true
 
 
