--- a/gradle.properties
+++ b/gradle.properties
@@ -4,24 +4,24 @@ org.gradle.jvmargs = -Xmx3G
 cleanroom_version=15.24.0.3029
 # Mod Information
 # HIGHLY RECOMMEND complying with SemVer for mod_version: https://semver.org/
-mod_version = 1.0.0
-root_package = com.example
-mod_id = modid
-mod_name = Mod Name
+mod_version=1.0.0
+root_package=com.example
+mod_id=modid
+mod_name=Mod Name
 
 # Mod Metadata (Optional)
-mod_description =
-mod_url =
-mod_update_json =
+mod_description=
+mod_url=
+mod_update_json=
 # Delimit authors with commas
-mod_authors =
-mod_credits =
-mod_logo_path =
+mod_authors=
+mod_credits=
+mod_logo_path=
 
 # Mapping Properties
-mapping_channel = stable
-mapping_version = 39-1.12
-use_dependency_at_files = true
+mapping_channel= stable
+mapping_version= 39-1.12
+use_dependency_at_files=true
 
 
 # If any properties changes below this line, refresh gradle again to ensure everything is working correctly.
