--- a/gradle.properties
+++ b/gradle.properties
@@ -19,8 +19,8 @@ mod_credits=Idealland - they provided this framework.
 mod_logo_path=
 
 # Mapping Properties
-mapping_channel= stable
-mapping_version= 39-1.12
+mapping_channel= snapshot
+mapping_version= 20171003
 use_dependency_at_files=true
 
 
