--- a/gradle.properties
+++ b/gradle.properties
@@ -1,22 +1,11 @@
+### Here is the build setting, if you want to bump version, edit description, go to `modmetadata.properties`
+
+
 # Gradle Properties
 org.gradle.jvmargs = -Xmx3G
 
+java_version = 21
 cleanroom_version=15.24.0.3029
-# Mod Information
-# HIGHLY RECOMMEND complying with SemVer for mod_version: https://semver.org/
-mod_version=1.0.0
-root_package=com.example
-mod_id=modid
-mod_name=Mod Name
-
-# Mod Metadata (Optional)
-mod_description=
-mod_url=
-mod_update_json=
-# Delimit authors with commas
-mod_authors=
-mod_credits=
-mod_logo_path=
 
 # Mapping Properties
 mapping_channel= stable
